@@ -1,5 +1,7 @@
 DIST emacs-updater-1.0_rc1.tar.bz2 4046 RMD160 cf89cbeb3f84f6e283071cb04c8eac526a10f34c SHA1 67f6a4671070136be78ff6906f7824062845b1cd SHA256 c55ccfd69e6d27384524704bd81f9aeb9b9a2786797b23daf69c98a7a540a222
+DIST emacs-updater-1.0_rc2.tar.bz2 4108 RMD160 b94438ba83e4f8f8dfc365450b1c8b9fa23acfe7 SHA1 3c2fe378dd36ec9d78e17ff588b5338ca7e8158b SHA256 d8512de4d66ac8fd729e174fe4d278769c4746e3e3a529dcb6c34934e2bc68ef
 EBUILD emacs-updater-1.0_rc1.ebuild 601 RMD160 7f5e972c79577b2be0852ed8d4cef0a2d0e04060 SHA1 0932122ac292a273c33dc03b23d9d18b8ffd89ef SHA256 cb396479d4ec110f984972c84db1baddb16a4e40eb82b0278a53c8002c38ebf5
+EBUILD emacs-updater-1.0_rc2.ebuild 601 RMD160 7f5e972c79577b2be0852ed8d4cef0a2d0e04060 SHA1 0932122ac292a273c33dc03b23d9d18b8ffd89ef SHA256 cb396479d4ec110f984972c84db1baddb16a4e40eb82b0278a53c8002c38ebf5
 EBUILD emacs-updater-9999.ebuild 668 RMD160 a68104496febdd4b933aa410d0e560b6d9d88068 SHA1 eba258942f89d6cec5247f68fe5e7d74f7d97ff8 SHA256 bbe3ea69f6bbfccd3641e7f7dd486e99194f4d7e49a439f9e62cca9f16e7defb
-MISC ChangeLog 518 RMD160 254ecd86517c764b7fc620be33717e722077c5ad SHA1 69d7cfc69844f3ab27414f033ba47da92725701d SHA256 33bf12d7c1d58b2fa0bbfdb17717257eb91bdbabf0ea3a035d2348cccb8ca915
+MISC ChangeLog 653 RMD160 36083caadb9f15fb3f7a0d98e573d52acdaf5ee3 SHA1 dca1e85673f7421e6b548edae09ed5f82c69051b SHA256 417ac9a894110ba7e2bd1ffe3360bc132da0549761e2c09a293daa6aa5beeac1
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
