@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*emacs-updater-1.0_rc2 (02 Sep 2008)
+
+  02 Sep 2008; Ulrich Mueller <ulm@gentoo.org>
+  +emacs-updater-1.0_rc2.ebuild:
+  Version bump.
+
 *emacs-updater-1.0_rc1 (29 Aug 2008)
 
   29 Aug 2008; Ulrich Mueller <ulm@gentoo.org> +emacs-updater-1.0_rc1.ebuild:
